# AutoBeale-Pikaia

./: CMakeLists.txt  README.md
cmake/: find_programs_and_libraries.cmake  print_summary.cmake
doc/: Doxyfile
example/: basic_autobeale_run.bat  jackknife_autobeale_run.bat
example/input/: St.Joseph_River__total_pcb__2015-01-01_2015-12-31.txt  St_Joseph_River_discharge_dv_2015-01-01_2015-12-31.txt
example/output/: LOAD_St.JosephRiver__total_pcb_20150101-20151231.txt  LOAD_St.JosephRiver__total_pcb_20150102-20151231.txt  St.JosephRiver__total_pcb_20150101-20151231.R  beale_stats.txt  beale_summary.txt  flow_conc_load_daily.txt  jackknife_results.txt
share/: autobeale_pikaia.sublime-project  autobeale_pikaia.sublime-workspace
src/: CMakeLists.txt  beale.F90  beale_data.F90  ga_beale.F90  ga_driver.F90  input.F90  main.F90  output.F90  pikaia.F90  pikaia_driver_module.F90  pikaia_function.F90  pikaia_module.F90  run_beale.F90  run_pikaia.F90  strata.F90  types.F90  unit_tests.F90  units.F90  version_control.tpl
